--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=demo
 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/sakila?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mariadb://localhost:3307/sakila?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=1234
 
 # Configuración de JPA/Hibernate
 spring.jpa.hibernate.ddl-auto=update
